--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,10 @@ a:hover {
     text-decoration: underline;
 }
 
+form a:hover {
+    background-color: initial;
+}
+
 h1 {
     font-size: 1.5rem;
     margin-top: 2.5rem;
@@ -152,7 +156,7 @@ footer a {
     display: flex;
     position: absolute;
     width: 46px;
-    height: 46px;
+    height: 48px;
     top: calc(100% - 2px);
     left: -23px;
     padding: 0;
@@ -190,24 +194,23 @@ footer a {
     fill-opacity: 1;
 }
 
-.lightbulb:hover svg path#bulbPath {
-    animation: flicker 0.6s ease-in-out;
-    animation-iteration-count: infinite;
-}
-
-.lightbulb:hover svg path#bgPath {
-    animation: flickerBg .6s ease-in-out;
-    animation-iteration-count: infinite;
-}
-
-.light:hover .lightcircle {
-    display: initial;
-    animation: flickerOpacify .6s ease-in-out;
-    animation-iteration-count: infinite;
-}
-
-.dark .lightbulb:hover svg path#bulbPath, .dark .lightbulb:hover svg path#bgPath {
-    animation: none;
+@media only screen and (min-width: 480px) {
+    .lightbulb:hover svg path#bulbPath {
+        animation: flicker 0.6s ease-in-out;
+        animation-iteration-count: infinite;
+    }
+    .lightbulb:hover svg path#bgPath {
+        animation: flickerBg .6s ease-in-out;
+        animation-iteration-count: infinite;
+    }
+    .light:hover .lightcircle {
+        display: initial;
+        animation: flickerOpacify .6s ease-in-out;
+        animation-iteration-count: infinite;
+    }
+    .dark .lightbulb:hover svg path#bulbPath, .dark .lightbulb:hover svg path#bgPath {
+        animation: none;
+    }
 }
 
 @keyframes flicker {
