--- a/src/components/newsletter.css
+++ b/src/components/newsletter.css
@@ -325,7 +325,7 @@
 }
 
 .formkit-form[data-uid="7153c14513"] .formkit-powered-by[data-active="false"] {
-    opacity: 0.35;
+    opacity: 1;
 }
 
 @-webkit-keyframes formkit-bouncedelay-formkit-form-data-uid-7153c14513- {
@@ -386,8 +386,15 @@
     flex: 1 0 100%;
 }
 
+.formkit-field span {
+    display: block;
+    height: 0;
+    width: 0;
+    overflow: hidden;
+}
+
 .formkit-form[data-uid="7153c14513"] .formkit-powered-by {
-    color: #7d7d7d;
+    color: #555;
     display: block;
     font-size: 12px;
     margin: 0;
