--- a/src/styles.css
+++ b/src/styles.css
@@ -8,8 +8,8 @@ html, body {
 }
 
 body.dark {
-    color: #fff;
-    background-color: #222;
+    color: rgba(255, 255, 255, .9);
+    background-color: #27292d;
 }
 
 h1, h2, h3, h4 {
@@ -24,7 +24,7 @@ h1 a, h2 a, h3 a, h4 a {
 }
 
 .dark h1, .dark h2, .dark h3, .dark h4 {
-    color: #fff;
+    color: rgba(255, 255, 255, .9);
 }
 
 a {
@@ -89,7 +89,11 @@ blockquote {
 }
 
 small {
-    color: #888
+    color: #333
+}
+
+.dark small {
+    color: rgba(255, 255, 255, .8);
 }
 
 .post h1 {
@@ -99,7 +103,7 @@ small {
 }
 
 .post h2 {
-    margin: 2rem 0 1rem 0;
+    margin: 3rem 0 1rem 0;
 }
 
 .main-header {
