--- a/src/styles.css
+++ b/src/styles.css
@@ -65,10 +65,12 @@ a:hover {
     text-decoration: underline;
 }
 
-/* 
-.dark a:hover {
-    color: var(--header-color);
-} */
+p {
+    font-size: 1.0625rem;
+    line-height: 1.6;
+    margin-top: 0;
+    margin-bottom: 1.6rem;
+}
 
 form a:hover {
     background-color: initial;
@@ -121,6 +123,10 @@ small {
     color: var(--small-color)
 }
 
+.post header {
+    margin-bottom: 1.6rem;
+}
+
 .post h1 {
     font-size: 2.5rem;
     margin-top: 1rem;
@@ -128,7 +134,7 @@ small {
 }
 
 .post h2 {
-    margin: 3rem 0 1rem 0;
+    margin: 3.2rem 0 0.8rem 0;
 }
 
 .main-header {
