--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,4 @@
 :root {
-    /* --main-bg-color: #fff;
-    --main-color: #444;
-    --main-small-color: #333;
-    --main-header-color: #222;
-    --main-separator-color: #eee;
-    --dark-bg-color: #27292d;
-    --dark-color: rgba(255, 255, 255, .9);
-    --dark-small-color: rgba(255, 255, 255, .8);
-    --dark-header-color: rgba(255, 255, 255, .9);
-    --dark-separator-color: rgba(255, 255, 255, .3); */
     --yellow: #ffc100;
     --yellow-light: #fee488;
 }
@@ -28,7 +18,7 @@ body.light {
     --small-color: #333;
     --header-color: #222;
     --separator-color: #eee;
-    --hover-bg-color: var(--yellow-light);
+    --hover-color: #FF0054;
 }
 
 body.dark {
@@ -37,7 +27,7 @@ body.dark {
     --small-color: rgba(255, 255, 255, .8);
     --header-color: rgba(255, 255, 255, .9);
     --separator-color: rgba(255, 255, 255, .3);
-    --hover-bg-color: #1A8FE3;
+    --hover-color: var(--yellow);
     background-color: var(--bg-color);
 }
 
@@ -61,7 +51,7 @@ a {
 }
 
 a:hover {
-    background-color: var(--hover-bg-color);
+    color: var(--hover-color);
     text-decoration: underline;
 }
 
@@ -229,6 +219,28 @@ footer a {
     fill-opacity: 1;
 }
 
+.gatsby-highlight {
+    overflow: auto;
+}
+
+@media only screen and (max-width: 670px) {
+    .gatsby-highlight {
+        margin-left: -1rem;
+        margin-right: -1rem;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    html, body {
+        font-size: 14px;
+    }
+    .bio-full {
+        flex-direction: column;
+        align-items: flex-end;
+        margin-top: -4rem;
+    }
+}
+
 @media only screen and (min-width: 480px) {
     .lightbulb:hover svg path#bulbPath {
         animation: flicker 0.6s ease-in-out;
@@ -342,9 +354,4 @@ h4.form-header {
     .post h2 {
         font-size: 1.5rem;
     }
-}
-
-code[class*="language-"], pre[class*="language-"] {
-    font-family: Consolas, Menlo, Monaco, source-code-pro, Courier New, monospace;
-    font-size: .875rem;
 }
