--- a/src/styles.css
+++ b/src/styles.css
@@ -134,14 +134,23 @@ small {
 .four-oh-four {
     display: flex;
     flex-direction: column;
-    text-align: center;
-    justify-content: center;
     height: 60vh;
+    margin-top: -3rem;
 }
 
 .four-oh-four h1 {
     font-size: 7rem;
     margin-bottom: 1rem;
+}
+
+.missing .lightbulbstring {
+    height: 100px;
+}
+
+.dark .missing .lightbulbstring .lightcircle {
+    display: initial;
+    animation: flickerOpacify .6s ease-in-out;
+    animation-iteration-count: infinite;
 }
 
 main+footer {
@@ -162,6 +171,13 @@ footer a {
     margin-right: 1rem;
     margin-bottom: 0;
     min-width: 80px;
+}
+
+.bio-full>div:nth-child(2) {
+    line-height: 1.2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .bio-full img {
@@ -237,7 +253,16 @@ footer a {
     .bio-full {
         flex-direction: column;
         align-items: flex-end;
-        margin-top: -4rem;
+        margin-top: -4.5rem;
+    }
+    .bio-full>div:first-child {
+        margin-right: 0;
+    }
+    .bio-full>div:nth-child(2) {
+        display: block;
+        margin-top: 1rem;
+        text-align: right;
+        font-size: 12px;
     }
 }
 
