--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-size: 16px;
-    font-family: 'IBM Plex Sans';
+    font-family: 'IBM Plex Sans', Arial, Helvetica, Verdana, sans-serif;
     min-height: 100vh;
     color: var(--color);
 }
