--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@ body.light {
     --small-color: #333;
     --header-color: #222;
     --separator-color: #eee;
+    --link-color: #FF0054;
     --hover-color: #FF0054;
 }
 
@@ -27,6 +28,7 @@ body.dark {
     --small-color: rgba(255, 255, 255, .8);
     --header-color: rgba(255, 255, 255, .9);
     --separator-color: rgba(255, 255, 255, .3);
+    --link-color: var(--yellow-light);
     --hover-color: var(--yellow);
     background-color: var(--bg-color);
 }
@@ -34,6 +36,10 @@ body.dark {
 h1, h2, h3, h4 {
     font-family: inherit;
     color: var(--header-color);
+}
+
+h1 a, h2 a, h3 a, h4 a {
+    color: inherit;
 }
 
 .main-header h1, .main-header h3 {
@@ -56,7 +62,7 @@ h1 a, h2 a, h3 a, h4 a {
 }
 
 a {
-    color: var(--header-color);
+    color: var(--link-color);
 }
 
 a:hover {
