--- a/src/styles.css
+++ b/src/styles.css
@@ -44,16 +44,11 @@ h1 a, h2 a, h3 a, h4 a {
 }
 
 .main-header h1 a:hover {
-    color: inherit;
     text-decoration: none;
 }
 
 .main-header h1, .main-header h3 {
     font-weight: 500;
-}
-
-.main-header h1 a, .main-header h3 a {
-    color: inherit
 }
 
 .dark .main-header h1 a {
@@ -80,6 +75,31 @@ a:hover {
     text-decoration: underline;
 }
 
+.post a, ul a {
+    border-bottom: 2px solid var(--yellow);
+}
+
+.dark footer>ul li {
+    color: #fff;
+}
+
+a {
+    white-space: nowrap;
+    color: inherit;
+    background-image: linear-gradient(120deg, var(--yellow) 0%, var(--yellow) 100%);
+    background-position: 0 100%;
+    background-repeat: no-repeat;
+    background-size: 100% 0;
+    transition: all .125s ease-in-out;
+    text-decoration: none;
+}
+
+a:hover {
+    background-size: 100% 100%;
+    text-decoration: none;
+    color: #000;
+}
+
 li {
     margin-bottom: 0.8rem;
     line-height: 1.6;
@@ -103,6 +123,7 @@ h1 {
 h2 {
     font-size: 1.55rem;
     margin-bottom: 0;
+    transform: scale(1);
 }
 
 h3 {
@@ -641,21 +662,10 @@ a.gatsby-resp-image-link {
 
 .article footer {
     padding-top: 3rem;
+    color: #fff;
     background-color: rgba(39, 41, 45, 1);
 }
 
 .dark .article footer {
     background-color: #000;
-}
-
-nav ul a, .article footer a {
-    color: var(--yellow-light)
-}
-
-.dark nav ul a, .dark .article footer a {
-    color: var(--yellow-light)
-}
-
-nav ul a:hover, .article footer a:hover {
-    color: var(--yellow)
 }
