--- a/src/styles.css
+++ b/src/styles.css
@@ -66,15 +66,6 @@ h1 a, h2 a, h3 a, h4 a {
     padding: 0.2rem 0.5rem;
 }
 
-a {
-    color: var(--link-color);
-}
-
-a:hover {
-    color: var(--hover-color);
-    text-decoration: underline;
-}
-
 .post a, ul a {
     border-bottom: 2px solid var(--yellow);
 }
@@ -84,7 +75,6 @@ a:hover {
 }
 
 a {
-    white-space: nowrap;
     color: inherit;
     background-image: linear-gradient(120deg, var(--yellow) 0%, var(--yellow) 100%);
     background-position: 0 100%;
@@ -381,6 +371,9 @@ footer ul {
         margin-top: 1rem;
         text-align: right;
         font-size: 12px;
+    }
+    .bio-full h1 {
+        font-size: 2.2rem;
     }
 }
 
