--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,7 @@ h1 a, h2 a, h3 a, h4 a {
     padding: 0.2rem 0.5rem;
 }
 
-.post a, ul a {
+.post a, .four-oh-four a, ul a {
     border-bottom: 2px solid var(--yellow);
 }
 
