--- a/src/prism-dark.css
+++ b/src/prism-dark.css
@@ -1,3 +1,23 @@
+.gatsby-highlight-code-line {
+	background-color: rgba(254, 228, 136, 0.4);
+	display: block;
+	margin-right: -1em;
+	margin-left: -1em;
+	padding-right: 1em;
+	padding-left: 0.75em;
+	border-left: 2px solid #ffc100;
+}
+
+.dark .gatsby-highlight-code-line {
+	background-color: rgba(139, 233, 253, 0.1);
+	display: block;
+	margin-right: -1em;
+	margin-left: -1em;
+	padding-right: 1em;
+	padding-left: 0.75em;
+	border-left: 2px solid rgba(139, 233, 253, 1);
+}
+
 /**
  * prism js dark theme, based on darcula
  */
