--- a/src/styles.css
+++ b/src/styles.css
@@ -99,7 +99,11 @@ li {
 p {
     font-size: 1.0625rem;
     line-height: 1.6;
-    margin: 0.8rem 0 0.8rem 0;
+    margin: 0.8rem 0 1.6rem 0;
+}
+
+p+ul {
+    margin-top: -0.8rem;
 }
 
 form a:hover {
