--- a/src/styles.css
+++ b/src/styles.css
@@ -66,6 +66,10 @@ h1 a, h2 a, h3 a, h4 a {
     padding: 0.2rem 0.5rem;
 }
 
+.post {
+    scroll-behavior: smooth;
+}
+
 .post a, .four-oh-four a, ul a {
     border-bottom: 2px solid var(--yellow);
 }
@@ -98,11 +102,16 @@ li {
 p {
     font-size: 1.0625rem;
     line-height: 1.6;
-    margin: 0.8rem 0 1.6rem 0;
+    margin: 2rem 0 0 0;
+}
+h1 + p,
+h2 + p,
+h3 + p {
+    margin-top: 1rem;
 }
 
 p+ul {
-    margin-top: -0.8rem;
+    margin-top: 0.5rem;
 }
 
 form a:hover {
@@ -127,6 +136,7 @@ h3 {
 
 .post h3 {
     font-size: 1.3rem;
+    margin-bottom: 0;
 }
 
 hr {
@@ -709,4 +719,8 @@ table {
 
 thead {
     text-align: left;
+}
+
+:not(pre) > code[class*="language-"] {
+    padding: 0.2rem 0.3rem;
 }
