--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    font-size: 16px;
+    font-size: 1rem;
     font-family: 'IBM Plex Sans', Arial, Helvetica, Verdana, sans-serif;
     min-height: 100vh;
     color: var(--color);
@@ -104,12 +104,12 @@ p {
     line-height: 1.6;
     margin: 2rem 0 0 0;
 }
-h1 + p,
-h2 + p,
-h3 + p {
+
+h1+p, h2+p, h3+p {
     margin-top: 1rem;
 }
-section > p {
+
+section>p {
     margin-top: 0;
 }
 
@@ -163,6 +163,13 @@ nav ul {
     padding: 1rem 0;
 }
 
+header[role="banner"] > .site-name{
+    font-size: 1.5rem;
+    margin-top: 2.5rem;
+    margin-bottom: 1rem;
+    font-weight: 500;
+}
+
 article {
     margin-top: 2.5rem;
 }
@@ -176,16 +183,17 @@ blockquote {
     font-style: italic;
 }
 
-small {
+time {
+    font-size: smaller;
     color: var(--small-color)
 }
 
-small>em {
+time>em {
     background: rgba(0, 0, 0, 0.05);
     padding: 0.1rem .5rem;
 }
 
-.dark small>em {
+.dark time>em {
     background: rgba(0, 0, 0, 0.5);
 }
 
@@ -724,6 +732,18 @@ thead {
     text-align: left;
 }
 
-:not(pre) > code[class*="language-"] {
+:not(pre)>code[class*="language-"] {
     padding: 0.2rem 0.3rem;
+}
+
+@media(prefers-reduced-motion: reduce) {
+    .dark .missing .lightbulbstring .lightcircle, .lightbulb:hover, .lightbulbstring:hover .lightcircle, .parallax>use {
+        animation: none !important;
+    }
+    a {
+        transition: none;
+    }
+    .post {
+        scroll-behavior: auto;
+    }
 }
