--- a/src/components/mdx/glitch.module.css
+++ b/src/components/mdx/glitch.module.css
@@ -5,6 +5,7 @@
     max-width: 100%;
     position: relative;    
     overflow: hidden;
+    --time: '0s';
 }
 .container > img, 
 .container1 > img,
@@ -26,10 +27,29 @@
     background-color: mediumspringgreen;
     background-image: none;
 }
+.container3::before{
+    animation-name: timer;
+}
+.container3::before,
 .container3 .overlay{
     animation-duration: 20s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
     animation-timing-function: steps(21, jump-start);
 }
+
+.container3::before{
+    content: var(--time);
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    color: #fff;    
+    background-color: rgba(0, 0, 0, 0.9);
+    padding: 0.2rem;
+    clip-path:none;
+    z-index: 1000;
+}
+
 
 .overlay{
     display: block;
@@ -65,6 +85,7 @@
 }
 
 @media(prefers-reduced-motion: reduce) {
+    .container3,
     .overlay{
         animation: none;
     }
@@ -72,6 +93,72 @@
         display: flex;
     }
 }    
+
+@keyframes timer {
+    0% {
+        --time: '0s';
+    } 
+    5% {
+        --time: '1s';
+    }   
+    10% {
+        --time: '2s';
+    }
+    15% {
+        --time: '3s';
+    }    
+    20% {
+        --time: '4s';
+    } 
+    25% {
+        --time: '5s';
+    }    
+    30% {
+        --time: '6s';
+    } 
+    35% {
+        --time: '7s';
+    }    
+    40% {
+        --time: '8s';
+    }  
+    45% {
+        --time: '9s';
+    }    
+    50% {
+        --time: '10s';
+    } 
+    55% {
+        --time: '10s';
+    }    
+    60% {
+        --time: '12s';
+    }    
+    65% {
+        --time: '13s';
+    } 
+    70% {
+        --time: '14s';
+    }
+    75% {
+        --time: '15s';
+    }    
+    80% {
+        --time: '16s';
+    } 
+    85% {
+        --time: '17s';
+    }    
+    90% {
+        --time: '18s';
+    }
+    95% {
+        --time: '19s';
+    }
+    100% {
+        --time: '20s';
+    }
+}
 
 @keyframes glitch {
     0% {
@@ -81,7 +168,7 @@
     }
     2% {
         clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
-        transform: translate(-5px) rotate(-2deg)
+        transform: translate(-5px) rotate(-2deg);
     }
     6% {
         clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
