--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -44,7 +44,7 @@ const tagPosts = getPostsByTag(posts, tag);
                 {tagPosts.map(post => {
                     return (<article>							
 								<h2>
-									<a href={'../'+slug(post)}>
+									<a href={'../../'+slug(post)}>
 										{post.frontmatter.title}
 									</a>
 								</h2>	
