Switch to astro

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -24,8 +24,7 @@ const { title, description, twitterImage = 'https://www.raresportan.com/twitter-
 <link rel="manifest" href="/site.webmanifest" crossorigin="anonymous">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
-<meta name="monetization" content="$ilp.uphold.com/FzNEikF9pkQJ" />
+<meta name="theme-color" content="#0077aa">
 <meta name="generator" content={Astro.generator} />
 
 <!-- Primary Meta Tags -->
