--- a/src/components/glitch/Glitch.astro
+++ b/src/components/glitch/Glitch.astro
@@ -273,7 +273,7 @@ switch (version) {
 </style>
 
 <div class={containerClass}>
-    <img src={"./cyberpunk.jpg"} alt="Cyberpunk 2077 screenshot" />
+    <img src={"/cyberpunk.jpg"} alt="Cyberpunk 2077 screenshot" />
     <span class="overlay"> </span>
     <span class="warning">
         Animation blocked because you prefer reduced motion.
