--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -106,5 +106,7 @@ const {
 			</section>
 		</main>
 		<Footer />
+		<!-- 100% privacy-first analytics -->
+		<script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 	</body>
 </html>
