--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -114,5 +114,7 @@ const { twitterImage, minutesRead } = remarkPluginFrontmatter;
 			</section>
 		</main>
 		<Footer />
+		<!-- 100% privacy-first analytics -->
+		<script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 	</body>
 </html> 
