--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,5 +72,7 @@ const posts = await Promise.all(sortedPosts.map(async p => {
 			</div>
 		</main>
 		<Footer isOnHomePage={true}/>
+		<!-- 100% privacy-first analytics -->
+		<script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 	</body>
 </html>
